--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <div class="header">
-        <div class="members" id="members"></div>
+        <div class="members" id="members">
+            <!-- ヘッダーのメンバー -->
+            <div class="member" data-member-id="1">...</div>
+        </div>
         <button class="control-btn create-btn" id="createAccountBtn">＋</button>
     </div>
 
     <div class="calendar-container" id="calendarContainer">
-        <div class="calendar" id="calendar"></div>
+        <div class="calendar" id="calendar">
+            <!-- カレンダー列 -->
+            <div class="member-column" data-member-id="1">...</div>
+        </div>
     </div>
 
     <!-- IoT制御ボタン（hidden） -->
