--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -88,7 +88,11 @@ body {
     background: #ff9800;
 }
 
-.status-out {
+.status-incollege {
+  background: #ff3b3b;
+}
+
+.status-outside {
     background: #9e9e9e;
 }
 
