--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,6 @@
             <!-- ヘッダーのメンバー -->
             <div class="member" data-member-id="1">...</div>
         </div>
-        <button class="control-btn create-btn" id="createAccountBtn">＋</button>
     </div>
 
     <div class="calendar-container" id="calendarContainer">
@@ -43,7 +42,15 @@
 
     <!-- モーダルトリガーボタン（右下） -->
     <button class="control-btn modal-trigger" id="modalTriggerBtn">
-        <p class = "control-btn_icon">⚡️</p>
+        <p class = "modal-icon">⚡️</p>
+    </button>
+
+    <!-- ユーザー作成ボタン（デスクトップ：IoTボタン上隣、スマホ：hidden） -->
+    <button class="control-btn create-btn" id="createAccountBtn">
+        <svg class="icon" viewBox="0 0 24 24">
+            <!-- 人物 -->
+            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+        </svg>
     </button>
 
     <!-- モーダル -->
@@ -66,7 +73,13 @@
                 </button>
                 <button class="control-btn aircon-btn off modal-btn" id="airconBtnModal">
                     <svg class="icon" viewBox="0 0 24 24">
-                        <path d="M6.59 3.41L5 5l6.29 6.29c.39.39 1.02.39 1.41 0L19 5l-1.59-1.59-5.12 5.12-5.7-5.12zM3 14l1.41 1.41 2.12-2.12C7.94 14.4 9.89 15 12 15s4.06-.6 5.47-1.71l2.12 2.12L21 14l-2.12-2.12c1.11-1.41 1.71-3.36 1.71-5.47L12 14 3.41 5.41 3 6c0 2.11.6 4.06 1.71 5.47L3 14z"/>
+                        <path d="M19 3H5C3.9 3 3 3.9 3 5v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zm-4-8h-2v-2h-2v2h-2v2h2v2h2v-2h2v-2z"/>
+                    </svg>
+                </button>
+                <button class="control-btn create-btn modal-btn hide-on-desktop" id="createAccountBtnModal">
+                    <svg class="icon" viewBox="0 0 24 24">
+                        <!-- 人物 -->
+                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                     </svg>
                 </button>
             </div>
